# ECE324-Mobility-Model-Project

./: .gitignore  Makefile  README.md  load_see_data.ipynb  main.py  pyproject.toml  requirements.txt  train_geosight.py  train_hmt.py  train_metabolic.py  train_privamove.py  train_socialmob.py
.github/: copilot-instructions.md
checkpoints/: README.md  hmt_final_step_1.pt  hmt_nohash_full_step_15000.pt  hmt_nohash_full_step_20000.pt  hmt_nohash_full_step_25000.pt  hmt_step_10000.pt  hmt_step_15000.pt
data/: DATA_CATALOG.md  README.md  h3_vocab_worldtrace_full.json  osm_context.json  worldtrace_sample_nyc.pkl
docs/: README.md  baselines.md  foundation_evals.md  neurips_2026.sty  neurips_checklist.tex  neurips_experiments.md  neurips_paper_draft.md  paper.tex  todo_length_sensitivity.md
notebooks/: README.md
references/: README.md
reports/: EVAL_CATALOG.md  README.md  foundation_downstream_report.md  foundation_downstream_report_full_table.tex  paper_compute_table.tex  paper_metrics.json  paper_unitraj_main.tex
scripts/: build_h3_vocab.py  build_local_subset.py  build_osm_context.py  collect_results.py  compare_unitraj_results.py  debug_nan.sh  download_hdx_dataset.py  download_worldtrace.py  download_worldtrace_full.sh  generate_all_plots.py  model_stats.py  prepare_movement_distribution.py  run_anomaly_detection.py  run_benchmarks.py  run_change_detection.py  run_commuting_zone_probe.py  run_data_efficiency.py  run_embedding_retrieval.py  run_foundation_eval_suite.py  run_foundation_suite.py  run_full_eval_sequence.sh  run_invariance_suite.py  run_length_sensitivity.py  run_macro_eval.py  run_macro_eval_latest.sh  run_missing_neurips_evals.sh  run_paper_suite.sh  run_reverse_order.py  run_similarity_retrieval.py  run_transfer_suite.py  run_travel_time_estimation.py  run_trip_classification.py  run_unitraj_eval.py  run_unitraj_external_eval.py  slurm_benchmark_hmt.sh  slurm_benchmark_latest.sh  slurm_change_detection.sh  slurm_downstream_tasks.sh  slurm_embedding_retrieval.sh  (+25 more)
utils/: hmt.py  (+9 more)
(+96 files in other folders)
