[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "route-rangers"
version = "0.1.0"
description = "Mobility model project scaffolded with a CCDS layout."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Route Rangers" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
