[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "route-rangers"
version = "0.1.0"
description = "Investigating length bias in trajectory machine learning models using hierarchical mobility transformers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Route Rangers" }]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "timm>=0.9.12",
    "einops>=0.6.1",
    "colored>=2.2.3",
    "rdp>=0.8",
    "scikit-learn>=1.2.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.16.0",
    "pyarrow>=12.0.0",
    "h3>=4.0.0",
    "osmnx>=1.6.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
