[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "route-rangers"
version = "0.1.0"
description = "TrajectoryFM-HMT code and paper artifacts for length-sensitivity evaluation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brayden Zhang" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
